<resources>
    <string name="app_name">Video To Photo</string>
    <string name="Settings">Settings</string>
    <string name="Gallery">Gallery</string>
    <string name="Slide_Show_Marker">SlideShow Marker</string>
    <string name="Select_Video">Select Video</string>
    <string name="Share">Share</string>
    <string name="Rate_Us">Rate Us</string>
    <string name="About_Us">About Us</string>
    <string name="Toast_Permission">Please grant permission to access the application</string>
    <string name="Menu_done">DONE</string>
    <string name="Quick_Capture">QUICK CAPTURE</string>
    <string name="Time_Capture">TIME CAPTURE</string>
    <string name="File_Format">File Format</string>
    <string name="Quality">Quality</string>
    <string name="Size">Size</string>
    <string name="Time_snap">Enter Time (In Seconds)</string>
    <string name="Cancel">Cancel</string>
    <string name="Ok">Ok</string>
    <string name="Video_Length">Time cannot be longer than video length</string>
    <string name="Status_Quotes" translatable="false">Status Quotes</string>
    <string name="Author" translatable="false">Author: </string>
    <string name="HDP_Solution" translatable="false">HDP Solution</string>
    <string name="Privacy_Policy" translatable="false">Privacy Policy:</string>
    <string name="web_policy" translatable="false">http://hdpsolution.com/privacy_policy/CameraApps/PrivacyPolicyCameraApp.html</string>
    <string name="Email" translatable="false">Email:</string>
    <string name="email_detail" translatable="false">Support@hdpsolution.com</string>
    <string name="Clear_Button">Clear All</string>
    <string name="Create">Create</string>
    <string name="Save">Save</string>
    <string name="Edit">Edit</string>
    <string name="Delete">Delete</string>
    <string name="Cut">Cut</string>
    <string name="Text">Text</string>
    <string name="Sticker">Sticker</string>
    <string name="Paint">Paint</string>
    <string name="Stroke_Size">Stroke Size</string>
    <string name="Enter_Your_Text">Enter Your Text</string>
    <string name="Emoji">Emoji</string>
    <string name="Save_Image_Complete">Save Image Complete</string>
    <string name="Done">Done</string>

    <string-array name="File_format">
        <item>PNG</item>
        <item>JPG</item>
    </string-array>

    <string-array name="Quality">
        <item>Best</item>
        <item>Very High</item>
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>

    <string-array name="Size">
        <item>0.5x</item>
        <item>1x</item>
        <item>1.5x</item>
        <item>2x</item>
        <item>3x</item>
    </string-array>
</resources>