<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:padding="@dimen/_16sdp"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:weightSum="10"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textColor="#4A4343"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"
            android:text="@string/Status_Quotes"
            android:padding="@dimen/_8sdp"
            android:layout_weight="0.9"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>
        <View
            android:background="#252121"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"/>
        <ImageView
            android:id="@+id/img_aboutUs"
            android:padding="@dimen/_16sdp"
            android:layout_gravity="center"
            android:src="@drawable/me"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"/>
        <TextView
            android:textColor="#8F8585"
            android:gravity="center"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold"
            android:text="@string/Author"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"/>
        <TextView
            android:id="@+id/tv_hdp_solution"
            android:textColor="#2196F3"
            android:gravity="center"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold"
            android:text="@string/HDP_Solution"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"/>
        <TextView
            android:layout_marginTop="@dimen/_12sdp"
            android:textColor="#8F8585"
            android:gravity="center"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold"
            android:text="@string/Privacy_Policy"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"/>
        <TextView
            android:id="@+id/tv_web_policy"
            android:paddingRight="@dimen/_8sdp"
            android:paddingLeft="@dimen/_8sdp"
            android:textColor="#2196F3"
            android:gravity="center"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            android:text="@string/web_policy"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <TextView
            android:layout_marginTop="@dimen/_12sdp"
            android:textColor="#8F8585"
            android:gravity="center"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold"
            android:text="@string/Email"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"/>
        <TextView
            android:textColor="#2196F3"
            android:gravity="center"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold"
            android:text="@string/email_detail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"/>
        <Button
            android:id="@+id/btn_ok_aboutUs"
            android:background="@drawable/custom_clickview"
            android:textColor="#2196F3"
            android:textSize="@dimen/_16sdp"
            android:text="@string/Ok"
            android:padding="@dimen/_2sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_weight="1"
            android:layout_gravity="center|right"
            android:layout_width="wrap_content"
            android:layout_height="0dp"/>
    </LinearLayout>
</FrameLayout>