<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_margin="@dimen/_12sdp"
    android:background="#00000000"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/img_closeTimeSnap"
        android:layout_gravity="top|right"
        android:scaleType="centerInside"
        android:src="@drawable/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:background="#EC4E4E"
        android:padding="@dimen/_14sdp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="#403D3D"
            android:textStyle="bold"
            android:textSize="@dimen/_18sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Time_snap"
            android:gravity="center"/>

        <EditText
            android:inputType="number"
            tools:text="2.0"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold"
            android:id="@+id/edt_timeSnap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:gravity="right"
            android:weightSum="4"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_cancel_TimeSnap"
                android:layout_marginTop="@dimen/_12sdp"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="@dimen/_18sdp"
                android:text="@string/Cancel"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tv_ok_TimeSnap"
                android:layout_marginTop="@dimen/_12sdp"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="@dimen/_18sdp"
                android:text="@string/Ok"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>