<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:onClick="NoClick"
    tools:context=".fragments.Settings_Fragment">
    <LinearLayout
        android:weightSum="10"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textSize="@dimen/_24sdp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/Settings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>
        <LinearLayout
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:paddingLeft="@dimen/_16sdp"
                android:gravity="center|left"
                android:textStyle="bold"
                android:textSize="@dimen/_24sdp"
                android:text="@string/File_Format"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/tv_formatImage"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="JPG"
                android:textStyle="bold"
                android:textSize="@dimen/_24sdp"
                android:textColor="#03A9F4"
                android:gravity="center|right"
                android:paddingRight="@dimen/_16sdp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/_16sdp"
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:paddingLeft="@dimen/_16sdp"
                android:gravity="center|left"
                android:textStyle="bold"
                android:textSize="@dimen/_24sdp"
                android:text="@string/Quality"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/tv_qualityImage"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="High"
                android:textStyle="bold"
                android:textSize="@dimen/_24sdp"
                android:textColor="#03A9F4"
                android:gravity="center|right"
                android:paddingRight="@dimen/_16sdp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/_16sdp"
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:paddingLeft="@dimen/_16sdp"
                android:gravity="center|left"
                android:textStyle="bold"
                android:textSize="@dimen/_24sdp"
                android:text="@string/Size"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/tv_sizeImage"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="1x"
                android:textStyle="bold"
                android:textSize="@dimen/_24sdp"
                android:textColor="#03A9F4"
                android:gravity="center|right"
                android:paddingRight="@dimen/_16sdp"/>
        </LinearLayout>
    </LinearLayout>



</FrameLayout>